--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "ganache-cli": "^6.7.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
