--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@toruslabs/torus-embed": "^0.2.9",
     "ganache-cli": "^6.7.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
